Demo now treats a file (if given) as its triple store, saving and loading aggregated data and dereferencer state to/from it.
git-svn-id: http://svn.fortytwo.net/projects@592 4bf1a796-0a03-0410-9b82-c499c1e613c7